Changes since 1.0:

* Add extraheader attribute to url's to allow custom headers to be set.
  [Justin Erenkrantz]

* Add payloadfile attribute to url's to allow the body to be read from a file.
  [Justin Erenkrantz]

* Support custom HTTP methods. [Justin Erenkrantz]

* Fix corruption when we have multiple usefarmer's without a count.
  [Justin Erenkrantz]

* Sync with latest find_apr.m4 and find_apu.m4 to detect 1.0 APR and APR-util.
  [Justin Erenkrantz]

* Add <proxyurl> child element to <urllist> to request against a proxy.
  [Justin Erenkrantz]

* Accept HTTP/1.0 responses to HTTP/1.1 requests.  [Justin Erenkrantz]

* Use APR's bundled mkdir script.  [Justin Erenkrantz]

* Support VPATH builds again.  [Justin Erenkrantz]

* Added the "content-type" parameter for URLs using the POST method.
  [Philippe Marzouk <phil@ozigo.org>]

* Remove .deps code that is just broken for now.  [Justin Erenkrantz]

* Added configversion attribute (root element <flood>) which ties config
  file structure with certain flood version and warns user if there is a
  conflict.  [Jacek Prucia]

* Added attribute responsescript (element <url>), which allows flood to
  delegate response processing to external script.  [Jacek Prucia]

* Change open_socket prototype to return errors.  [Justin Erenkrantz]
  
* Fix HEAD responses with Content-Length specified being handled incorrectly.
  [Justin Erenkrantz]

* Flood manual (DocBook based).  [Jacek Prucia]

* Added <baseurl> element. When present, it's contents are copied in front
  of every <url> element, which makes relative urllist's possible.
  [Jacek Prucia]

* Added basic auth support. When user and passowrd attributes of <url>
  element are present and non-empty, flood sends auth data with request.
  [Jacek Prucia]

* Added generic_fullresp_recv_resp() to force full response.
  [Phi-Long Tran <ptran@pobox.com>]

* Fixed compiler warning about signed/unsigned mismatch in generic_recv_resp.
  [Phi-Long Tran <ptran@pobox.com>]
